; ModuleID = '/home/carl/AnghaBench/linux/drivers/iio/light/extr_st_uvis25_core.c_st_uvis25_read_oneshot.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/iio/light/extr_st_uvis25_core.c_st_uvis25_read_oneshot.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.st_uvis25_hw = type { i32 }

@IIO_VAL_INT = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.st_uvis25_hw*, i32, i32*)* @st_uvis25_read_oneshot to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @st_uvis25_read_oneshot(%struct.st_uvis25_hw* %0, i32 %1, i32* %2) #0 {
  %4 = alloca i32, align 4
  %5 = alloca %struct.st_uvis25_hw*, align 8
  %6 = alloca i32, align 4
  %7 = alloca i32*, align 8
  %8 = alloca i32, align 4
  store %struct.st_uvis25_hw* %0, %struct.st_uvis25_hw** %5, align 8
  store i32 %1, i32* %6, align 4
  store i32* %2, i32** %7, align 8
  %9 = load %struct.st_uvis25_hw*, %struct.st_uvis25_hw** %5, align 8
  %10 = call i32 @st_uvis25_set_enable(%struct.st_uvis25_hw* %9, i32 1)
  store i32 %10, i32* %8, align 4
  %11 = load i32, i32* %8, align 4
  %12 = icmp slt i32 %11, 0
  br i1 %12, label %13, label %15

13:                                               ; preds = %3
  %14 = load i32, i32* %8, align 4
  store i32 %14, i32* %4, align 4
  br label %38

15:                                               ; preds = %3
  %16 = call i32 @msleep(i32 1500)
  %17 = load %struct.st_uvis25_hw*, %struct.st_uvis25_hw** %5, align 8
  %18 = call i32 @st_uvis25_set_enable(%struct.st_uvis25_hw* %17, i32 0)
  store i32 %18, i32* %8, align 4
  %19 = load i32, i32* %8, align 4
  %20 = icmp slt i32 %19, 0
  br i1 %20, label %21, label %23

21:                                               ; preds = %15
  %22 = load i32, i32* %8, align 4
  store i32 %22, i32* %4, align 4
  br label %38

23:                                               ; preds = %15
  %24 = load %struct.st_uvis25_hw*, %struct.st_uvis25_hw** %5, align 8
  %25 = getelementptr inbounds %struct.st_uvis25_hw, %struct.st_uvis25_hw* %24, i32 0, i32 0
  %26 = load i32, i32* %25, align 4
  %27 = load i32, i32* %6, align 4
  %28 = load i32*, i32** %7, align 8
  %29 = call i32 @regmap_read(i32 %26, i32 %27, i32* %28)
  store i32 %29, i32* %8, align 4
  %30 = load i32, i32* %8, align 4
  %31 = icmp slt i32 %30, 0
  br i1 %31, label %32, label %34

32:                                               ; preds = %23
  %33 = load i32, i32* %8, align 4
  br label %36

34:                                               ; preds = %23
  %35 = load i32, i32* @IIO_VAL_INT, align 4
  br label %36

36:                                               ; preds = %34, %32
  %37 = phi i32 [ %33, %32 ], [ %35, %34 ]
  store i32 %37, i32* %4, align 4
  br label %38

38:                                               ; preds = %36, %21, %13
  %39 = load i32, i32* %4, align 4
  ret i32 %39
}

declare dso_local i32 @st_uvis25_set_enable(%struct.st_uvis25_hw*, i32) #1

declare dso_local i32 @msleep(i32) #1

declare dso_local i32 @regmap_read(i32, i32, i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
